# ATRI

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
atri-host/: Cargo.toml
atri-host/atri-bridge-vst3/: Cargo.toml
atri-host/atri-bridge-vst3/src/: bridge_contract.rs  dashboard_client.rs  daw_agent_surface.rs  drag_drop.rs  editor.rs  editor_surface.rs  factory.rs  host_context.rs  identity.rs  lib.rs  packaging.rs  processor.rs  tests.rs
atri-host/atri-core/: Cargo.toml
atri-host/atri-core/src/: lib.rs  plugin.rs
atri-host/atri-core/src/audio/: buffer.rs  buffer_set.rs  mod.rs
atri-host/atri-core/src/midi/: event.rs  message.rs  mod.rs  note.rs  sequencer.rs
atri-host/atri-core/src/time/: bbt.rs  beats.rs  mod.rs  superclock.rs  tempo.rs  tempo_map.rs  timecnt.rs  timepos.rs
atri-host/atri-engine/: Cargo.toml
atri-host/atri-engine/src/: audio_clip.rs  engine.rs  lib.rs  mixer.rs  plugin_proc.rs  processor.rs  route.rs  session.rs  synth.rs  transport.rs
atri-host/atri-host-bin/: Cargo.toml
atri-host/atri-host-bin/src/: commands.rs  config.rs  driver.rs  editor_host.rs  ipc.rs  main.rs  stream.rs
atri-host/atri-vst3/: Cargo.toml
atri-host/atri-vst3/src/: factory.rs  host.rs  lib.rs  plugin.rs  runtime.rs  scanner.rs
atri-host/atri-vst3/src/com/: base.rs  funknown.rs  mod.rs
atri-host/scripts/: package-atri-bridge-vst3.ps1
core/: __init__.py  config_schema.py  event_bus.py  host.py  lifecycle.py  music_export.py  music_project.py  piano_playability.py
core/agent/: __init__.py  agent.py  context.py  llm.py  mode.py  prompt.py  session.py  tools_bridge.py
core/knowledge/: __init__.py  chunking.py  embedding.py  extraction.py  graph.py  graph_worker.py  manager.py  rerank.py  retrieval.py  store.py
core/music_theory/: __init__.py  music21_harmony.py  music21_transform.py
core/pipeline/: __init__.py  scheduler.py  stage.py
core/pipeline/stages/: __init__.py  preprocess.py  process.py  respond.py  waking.py
core/platform/: __init__.py  base.py  daw_agent.py  message.py  onebot11.py  webchat.py
core/plugin/: __init__.py  base.py  manager.py
core/runtime/: __init__.py  tasks.py  timeline.py  todos.py
core/skills/: __init__.py  skill_manager.py
core/tools/: __init__.py  _constants.py  agent_tool.py  automation.py  base.py  bash.py  chemistry.py  edit.py  find_replace.py  glob_tool.py  grep.py  harmony.py  lint.py  list_dir.py  mcp.py  midi.py  mode.py  music.py  novelai_image.py  piano_lane.py  read.py  retrieve_tool_result.py  screenshot.py  search.py  skill.py  studio.py  task_result.py  terminal.py  todo.py  tree.py  web_search.py  write.py
core/utils/: __init__.py  files.py  strings.py
dashboard/: __init__.py  host_dawproject_sync.py  music.py  server.py
dashboard/routes/: __init__.py  _helpers.py  auth.py  chat.py  daw_agent.py  knowledge.py  management.py  mcp.py  models.py  skills.py  websocket.py
dashboard/static/: index.html
dashboard/static/assets/: index-5rkio47J.js  index-CU3eSMBl.css  vendor-eVUg3GML.js
docs/superpowers/plans/: 2026-05-20-bus-routing-implementation.md  2026-05-29-bridge-midi-multi-track-preview.md  2026-05-29-vst-bridge-mini-preview.md
docs/superpowers/specs/: 2026-05-19-vst-automation-tracks-design.md  2026-05-20-bus-routing-design.md  2026-05-21-chem-draw-tool-design.md  2026-05-23-studio-piano-lane-agent-tools-design.md  2026-05-29-bridge-midi-multi-track-preview-design.md  2026-05-29-vst-bridge-mini-preview-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.surface.test.js  App.vue  main.js
frontend/src/components/activity/: ActivityBar.vue
frontend/src/components/auth/: AuthGate.vue
frontend/src/components/chat/: AgentTodoPanel.vue  ChatInput.vue  ChatMessage.vue  ChatPage.vue  DawAgentPage.vue  DiffViewer.vue  EditorTabs.vue  FilePanel.vue  MidiArtifactCard.vue  ModelSelector.vue  SessionPanel.vue  ThinkingBlock.vue  ToolCard.vue  mathRenderer.js  midiArtifact.js  midiArtifact.test.js
frontend/src/components/layout/: PageHeader.vue  StatusBar.vue
frontend/src/components/music/: MusicFullPlayer.vue  MusicPage.vue  MusicPlayer.vue  MusicStudio.vue  controllerLanes.js  controllerLanes.test.js  meterEvents.js  meterEvents.test.js  pianoQuantize.js  pianoViewport.js  (+8 more)
frontend/src/composables/: chatAssistantChain.js  chatAssistantChain.test.js  chatDisplayItems.js  chatDisplayItems.test.js  chatHttpResponse.js  chatHttpResponse.test.js  useApi.js  useAuth.js  useChat.js  useChat.test.js  useDawHost.js  useMusic.js  useProviders.js  useSession.js  useWebSocket.js  useWebSocket.test.js
frontend/src/styles/: variables.css
frontend/src/worklets/: pcm-player-worklet.js
tests/: test_agent_mode.py  test_agent_prompt.py  test_agent_read_image_context.py  test_agent_screenshot_context.py  test_agent_todo_frontend.py  test_agent_todo_tool.py  test_chat_math_renderer.py  test_chat_message_component.py  test_chemistry_tool.py  test_config_schema.py  test_dashboard_bridge_auth.py  test_dashboard_helpers.py  test_daw_agent_frontend.py  test_daw_agent_routes.py  test_dawproject_snapshot_scripts.py  test_event_bus_shutdown.py  test_filesystem_tools.py  test_graph_knowledge.py  test_host_manager.py  test_knowledge_core.py  test_knowledge_integration.py  test_knowledge_page_component.py  test_knowledge_routes.py  test_lifecycle.py  test_lifecycle_shutdown.py  test_llm_multimodal.py  test_main_shutdown.py  test_mcp_helpers.py  test_music_export.py  test_music_full_player_component.py  test_music_harmony_analysis.py  test_music_project.py  test_music_studio_component.py  test_music_studio_sync.py  test_piano_playability.py  test_pipeline_stages.py  test_platform.py  test_platform_message.py  test_process_runtime_recorder.py  test_runtime.py  (+14 more)
tools/host_dawproject/: README.md
tools/host_dawproject/macros/: studio-one.md
tools/host_dawproject/windows/: studio_one_export_snapshot.ahk
(+18 files in other folders)
