[project]
name = "atri"
version = "0.1.0"
description = "ATRI - AI Coding Agent Framework with OneBot11 & WebUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0",
    "aiocqhttp>=1.4.0",
    "quart>=0.19.0",
    "hypercorn>=0.17.0",
    "pyyaml>=6.0",
    "mutagen>=1.47.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
