[workspace]
members = [
    "atri-core",
    "atri-engine",
    "atri-vst3",
    "atri-bridge-vst3",
    "atri-host-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
crossbeam = "0.8"
ringbuf = "0.5"
cpal = "0.15"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
vst3 = "0.3"
winit = "0.30"
raw-window-handle = "0.6"
base64 = "0.22"
