[package]
name = "atri-vst3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atri-core = { path = "../atri-core" }
libloading.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
vst3.workspace = true
